# characters_extractor

./: CMakeLists.txt
data/: Untitled 1.odt  Untitled 2.odt  dataset.csv
include/: character_extractor.hpp  functions_impl.hpp
src/: character_extractor.cpp  functions_impl.cpp  main.cpp
